[package]
name = "tiny-pinch"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/TinyPinch/tiny-pinch"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
lazy_static = "1.5.0"
shell-words = "1.1.0"
steamlocate = "1.2.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
dll-syringe = "0.15.2"
