[package]
name = "tiny-pinch"
version = "0.1.3"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.18", features = ["derive"] }
lazy_static = "1.5.0"
shell-words = "1.1.0"
steamlocate = "1.2.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[target.'cfg(windows)'.dependencies]
dll-syringe = "0.15.2"
