[package]
name = "brush_mod"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
canopy = { path = "../../canopy"}
graft = { path = "../../graft"}
clap = { version = "4.5.18", features = ["derive"] }
tracing = "0.1.40"
bevy_input = { git = "https://github.com/TinyPinch/bevy", branch = "mt-executor-hax" }
bevy_ecs = { git = "https://github.com/TinyPinch/bevy", branch = "mt-executor-hax" }
