[package]
name = "lumberjack-dumper"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/TinyPinch/lumberjack"

[lib]
crate-type = ["cdylib"]

[dependencies]
bevy_ecs = { git = "https://github.com/TinyPinch/bevy", branch = "mt-executor-hax" }
ctor = "0.2.8"
retour = "0.3.1"
lumberjack = { path = "../../lumberjack" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
shell-words = "1.1.0"
anyhow = "1.0.89"
pdb = "0.8.0"
rustc-demangle = "0.1.24"
windows = { version = "0.58.0", features = ["Win32_System_LibraryLoader"] }
once_cell = "1.19.0"
clap = { version = "4.5.18", features = ["derive"] }
parking_lot = "0.12.3"
bincode = "1.3.3"